# pia

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  allowlist.yaml.example  docker-compose.yml  projects.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md
pia/: __init__.py  config.py  dependencytrack.py  main.py  models.py  oidc.py
tests/: conftest.py  test_dependencytrack.py  test_main.py  test_models.py  test_oidc.py
